# streamlit-cv-oumaima

./: main.py  main_eng.py  pyproject.toml  requirements.txt
